--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -4,7 +4,7 @@
 #   The weight parameter defines the order that the links will appear in.
 
 [[main]]
-  name = "Accueil"
+  name = "Home"
   url = "#about"
   weight = 10
 
@@ -14,7 +14,7 @@
   weight = 20
 
 [[main]]
-  name = "Projets"
+  name = "Projects"
   url = "#projects"
   weight = 30
 
@@ -24,7 +24,7 @@
   weight = 40
 
 [[main]]
-  name = "Tutos"
+  name = "Tutorials"
   url = "/tutorial/"
   weight = 50
 
