--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -3,8 +3,8 @@
 #   Refer to https://sourcethemes.com/academic/docs/language/
 
 # Configure the English version of the site.
-[fr]
-  languageCode = "fr-fr"
+[en]
+  languageCode = "en-us"
 
 # Uncomment the lines below to configure your website in a second language.
 #[zh]
