--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -19,7 +19,7 @@ copyright = "&iPerformance {year}"
 googleAnalytics = ""
 
 # Enable comments by entering your Disqus shortname
-disqusShortname = ""
+disqusShortname = "Dan Nevermore"
 
 ############################
 ## Advanced options below ##
@@ -32,7 +32,7 @@ theme = "academic"
 enableGitInfo = false
 
 # Default language to use (if you setup multilingual support)
-defaultContentLanguage = "en"
+defaultContentLanguage = "fr"
 hasCJKLanguage = false  # Set `true` for Chinese/Japanese/Korean languages.
 defaultContentLanguageInSubdir = false
 
