--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -16,7 +16,7 @@ baseurl = "/"
 copyright = "&iPerformance {year}"
 
 # Enable analytics by entering your Google Analytics tracking ID
-googleAnalytics = ""
+googleAnalytics = "gtag('set', {'user_id': 'USER_ID'}); // Définir l'ID utilisateur à partir du paramètre user_id de l'utilisateur connecté."
 
 # Enable comments by entering your Disqus shortname
 disqusShortname = "Dan Nevermore"
